# livepainting

./: README.md  app.js  index.html
RANSAC/: dede.cpp  main.cpp  main.cpp.autosave  main_test.cpp  sauvegarde.txt
RANSAC/savegarde/: main.cpp
RANSAC/src/: pattern.cpp  pattern.h  patterndetector.cpp  patterndetector.hpp
Ransac/: CMakeLists.txt  main.cpp
reconstruction/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.user.Of6549  Makefile  cmake_install.cmake  main.cpp
reconstruction/data/: test.txt
reconstruction/src/: Camera.cpp  Camera.hpp  CameraEigen.cpp  CameraEigen.hpp  DUtils.cpp  KeypointMatcher3D2D.cpp  KeypointMatcher3D2D.hpp  LaplacianMesh.cpp  LaplacianMesh.hpp  LinearAlgebraUtils.cpp  Timer.cpp  Visualization.cpp  Visualization.hpp  maillage.cpp  maillage.hpp  maillageEigen.hpp
three3d/: app.js  appold.js  index.html
three3d/js/: FBXLoader.js  GLTFLoader.js  gltf (1).html  gltf.html
three3d/model/: rhino.fbx  rhino.glb  serpent.fbx  singe.fbx  singe.glb  singe2.glb  turtle.glb  wugui.fbx
